src/scss/vd.scss
@import './utils/variables';

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  font-size: 62.5%;
  height: 100%;
  overflow: hidden;
  width: 100%;
}

body {
  background: linear-gradient(135deg, #ebebeb, #e9e9e9);
  font-size: 1.4rem;
  color: #181818;
  font-family: sans-serif;
  position: relative;
}

p {
  font-size: 1.6rem;
  margin-bottom: var(--spacing);
}

/* Page header with title, lang select and social links */
header {
  align-items: center;
  background: linear-gradient(60deg, var(--color-bg) 0%, var(--color-bg-darker) 100%);
  border-top: solid 5px var(--color-main);
  box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 16rem;
  position: relative;
  z-index: 1;

  h1 {
    font-family: Tangerine 'Segoe UI', sans-serif;
    font-size: 6rem;
  }

  h2 {
    font-style: italic;
    font-size: 1.66rem;
  }

  nav {
    bottom: 0;
    display: flex;
    position: absolute;
    transform: translateY(50%);
    user-select: none;
    z-index: 2;

    a {
      background-color: var(--color-bg);
      border: solid 1px rgba(0, 0, 0, .2);
      border-left: none;
      color: var(--color-fg);
      cursor: pointer;
      padding: var(--spacing-small) var(--spacing);
      margin: 0;
      text-align: center;
      text-decoration: none;
      user-select: none;
      width: 10rem;

      transition: all var(--transition);

      &:active,
      &:focus,
      &:hover {
        background-color: var(--color-alt-2);
      }

      &:first-child {
        border-left: solid 1px rgba(0, 0, 0, .2);
        border-bottom-left-radius: .5rem;
        border-top-left-radius: .5rem;
      }

      &:last-child {
        border-bottom-right-radius: .5rem;
        border-top-right-radius: .5rem;
      }
    }
  }
}

main {
  height: calc(100% - 16rem);
  width: 100%;
  z-index: 1;

  section {
    width: calc(100% - var(--default-scroll-size));

    h3 {
      font-family: Tangerine 'Segoe UI', sans-serif;
      font-size: 5rem;
      margin-bottom: var(--spacing);
      text-align: center;
    }
  }

  section.image {
    display: flex;

    img {
      width: 100%;
    }
  }

  section.about {
    background: linear-gradient(300deg, var(--color-main-darker) 0%, var(--color-alt-1) 100%);
    padding: var(--spacing-large) 25%;

    p {
      text-align: justify;
      text-indent: var(--spacing);

      &:last-of-type {
        margin-bottom: 0;
      }
    }
  }

  section.book {
    background: linear-gradient(60deg, var(--color-bg-darker) 0%, var(--color-bg) 100%);
    padding: var(--spacing-large) var(--spacing-huge);

    .gallery-container {
      display: grid;
      grid-gap: var(--spacing);
      grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
      grid-auto-flow: dense;
      align-items: stretch;
      justify-items: stretch;

      img {
        box-shadow: 0 0 5px 5px rgba(0, 0, 0, .05);
        cursor: pointer;
        object-fit: cover;
        max-width: 100%;

        transition: all var(--transition);

        &:active,
        &:focus,
        &:hover {
          box-shadow: 0 0 5px 5px rgba(0, 0, 0, .15);
          transform: scale(1.01);
        }

        &.portrait {
          grid-row: span 2;
        }
      }
    }
  }

  section.contact {
    background: linear-gradient(300deg, var(--color-alt-2) 0%, var(--color-main) 100%);
    border-bottom: solid 5px var(--color-main);
    display: flex;
    flex-direction: column;
    padding: var(--spacing-large) 33%;
    text-align: center;

    a {
      color: var(--color-main-darker);
      font-size: 2.6rem;
      font-style: italic;
      margin-bottom: var(--spacing);
      text-decoration: none;

      transition: all var(--transition);

      &:active,
      &:focus,
      &:hover {
        color: var(--color-main);
      }
    }

    span {
      color: var(--color-main-darker);
      cursor: pointer;
      font-style: italic;

      &:active,
      &:focus,
      &:hover {
        color: var(--color-main);
      }
    }
  }
}
/* Switch checkbox style */
.bw-switch-container {
  align-content: center;
  display: flex;
  justify-content: center;

  p {
    display: inline-block;
    margin: 0;
  }

  .switch-wrapper {
    align-items: center;
    display: flex;
    flex: 1;
    height: 100%;
    justify-content: center;
    max-width: 5rem;
    user-select: none;
    width: 5rem;

    input[type="checkbox"].switch {
      appearance: none;
      cursor: pointer;
      height: calc(1.6rem + 2px);
      background-color: rgb(255, 107, 103);
      border: solid 1px rgb(127, 127, 127);
      border-radius: 3rem;
      margin: 0;
      position: relative;
      outline: none;
      width: 3.6rem;
      transition: all .3s ease-in-out;

      &::after {
        content: '';
        background: white;
        border-radius: 50%;
        box-shadow: 0 0 .25rem rgba(0, 0, 0, .9);
        height: 1.6rem;
        left: 0;
        position: absolute;
        transform: scale(.7);
        width: 1.6rem;
        transition: all .3s ease-in-out;
      }
      
      &:checked {
        background-color: rgb(86, 212, 91);
      }
      
      &:checked::after {
        left: calc(100% - 1.6rem);
      }
    }
  }
}
/* Loader while page is being set */
.loading-overlay {
  background-color: var(--color-bg);
  cursor: progress;
  height: 100%;
  opacity: 1;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;

  transition: all var(--transition-long);

  &::before {
    content: '';
    background-color: var(--color-main);
    border-radius: .5rem;
    height: var(--spacing-large);
    left: calc(50% - var(--spacing));
    position: absolute;
    top: 50%;
    width: var(--spacing-large);

    animation: rotate-plane 1.2s infinite ease-in-out;
  }
}

@import 'utils/modal';
@import 'utils/responsive';

